# testcontainers-edu-example

./: README.md  pyproject.toml
app/: db_utils.py  main.py  models.py  schemas.py  script.py  services.py
app/tests/: conftest.py  test_main.py  test_services.py
