[tool.poetry]
name = "testcontainers-edu-example"
version = "0.1.0"
description = ""
authors = ["Mateusz Anikiej <mateusz@anikiej.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pytest = "^8.1.1"
testcontainers = "^4.1.1"
testcontainers-postgres = "^0.0.1rc1"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.28"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
uvicorn = "^0.29.0"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
